src/main/java/com/example/turnpage/global/error/ErrorCodeInterface.java
package com.example.turnpage.global.error;

public interface ErrorCodeInterface {
    public ErrorCode getErrorCode();
}
